# CMakeTutorial

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
lib/math/: operations.cpp  operations.hpp
